--- a/configure.in
+++ b/configure.in
@@ -1,17 +1,38 @@
-#ident "$Id$"
 ## -----------------------------------------------------------------------
 ##   
-##   Copyright 1995-2001 H. Peter Anvin - All Rights Reserved
+##   Copyright 1995-2008 H. Peter Anvin - All Rights Reserved
 ##
 ##   This program is free software; you can redistribute it and/or modify
 ##   it under the terms of the GNU General Public License as published by
-##   the Free Software Foundation, Inc., 675 Mass Ave, Cambridge MA 02139,
-##   USA; either version 2 of the License, or (at your option) any later
-##   version; incorporated herein by reference.
+##   the Free Software Foundation, Inc., 51 Franklin St, Fifth Floor,
+##   Boston MA 02110-1301, USA; either version 2 of the License, or
+##   (at your option) any later version; incorporated herein by reference.
 ##
 ## -----------------------------------------------------------------------
 
-AC_INIT(Makefile.in)
+AC_INIT(ranpwd, 1.2)
+AC_PREREQ(2.59)
+
 AC_PROG_CC
+
+PA_ADD_CFLAGS(-Wall)
+PA_ADD_CFLAGS(-W)
+PA_ADD_CFLAGS(-Wpointer-arith)
+PA_ADD_CFLAGS(-Wbad-function-cast)
+PA_ADD_CFLAGS(-Wcast-equal)
+PA_ADD_CFLAGS(-Wstrict-prototypes)
+PA_ADD_CFLAGS(-Wmissing-prototypes)
+PA_ADD_CFLAGS(-Wmissing-declarations)
+PA_ADD_CFLAGS(-Wnested-externs)
+PA_ADD_CFLAGS(-Winline)
+PA_ADD_CFLAGS(-Wshadow)
+PA_ADD_CFLAGS(-Wcast-align)
+PA_ADD_CFLAGS(-pipe)
+
+AC_CHECK_HEADERS(getopt.h)
+AC_CHECK_FUNCS(getopt_long)
+
 AC_PROG_INSTALL
+
+AC_CONFIG_HEADER(config.h)
 AC_OUTPUT(Makefile)
